Aggiunto import di files batch per 5a versione