@@ -1,6 +1,7 @@
 package it.unibs.ids.elaborato;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import it.unibs.fp.mylib.InputDati;
 
@@ -17,7 +18,7 @@ public class ViewUtility {
 			cat = categoryController.getCategoria(InputDati.leggiStringaNonVuota(messaggio));
 			if(categoryController.getCategorie().contains(cat)) tryAgain=false;
 			else {
-				System.out.println("La Categoria inserita non è valida!");
+				System.out.println("La Categoria inserita non ï¿½ valida!");
 				if(InputDati.yesOrNo("Vuoi riprovare?")) tryAgain=true;
 				else tryAgain=false;
 			}
@@ -33,7 +34,7 @@ public class ViewUtility {
 			campo = articolo.getCampoFromNome(InputDati.leggiStringaNonVuota("Inserire Campo: "));
 			if(articolo.getCampiArticolo().contains(campo)) tryAgain = false;
 			else {
-				System.out.println("La Categoria inserita non è valida!");
+				System.out.println("La Categoria inserita non ï¿½ valida!");
 				if(InputDati.yesOrNo("Vuoi riprovare?")) tryAgain=true;
 				else tryAgain=false;
 			}
@@ -46,10 +47,10 @@ public class ViewUtility {
 		do {
 			tryAgain = false;
 			String nomeArticolo = InputDati.leggiStringaNonVuota(messaggio);
-			if(articoli.stream().anyMatch(articolo->articolo.getNomeArticolo().equals(nomeArticolo))) return articoli.stream().filter(art->art.getNomeArticolo().equals(nomeArticolo)).toList().get(0);
+			if(articoli.stream().anyMatch(articolo->articolo.getNomeArticolo().equals(nomeArticolo))) return articoli.stream().filter(art->art.getNomeArticolo().equals(nomeArticolo)).collect(Collectors.toList()).get(0);
 			else tryAgain = true;
 			if(tryAgain) {
-				System.out.println("L'Articolo inserito non è valido!");
+				System.out.println("L'Articolo inserito non ï¿½ valido!");
 				if(InputDati.yesOrNo("Vuoi riprovare?")) tryAgain=true;
 				else tryAgain=false;
 			}
@@ -135,7 +136,7 @@ public class ViewUtility {
 				else errore = true;
 			 }
 			if(errore) {
-				System.out.println("L'id inserito non è valido!");
+				System.out.println("L'id inserito non ï¿½ valido!");
 				if(InputDati.yesOrNo("Vuoi riprovare?")) tryAgain=true;
 				else tryAgain=false;
 			}
